; ModuleID = '/home/carl/AnghaBench/esp-idf/components/app_trace/sys_view/esp32/extr_SEGGER_RTT_esp32.c_SEGGER_RTT_ReadNoLock.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/app_trace/sys_view/esp32/extr_SEGGER_RTT_esp32.c_SEGGER_RTT_ReadNoLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_APPTRACE_DEST_TRAX = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SEGGER_RTT_ReadNoLock(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* @ESP_APPTRACE_DEST_TRAX, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = call i64 @esp_apptrace_read(i32 %11, i8* %12, i32* %8, i32 0)
  store i64 %13, i64* %9, align 8
  %14 = load i64, i64* %9, align 8
  %15 = load i64, i64* @ESP_OK, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %20

18:                                               ; preds = %3
  %19 = load i32, i32* %8, align 4
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %18, %17
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i64 @esp_apptrace_read(i32, i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
